Move to multirelease project; fix some bugs